// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test (If) statement With (Then) and (Else) - [chaining version] 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 54))
            storage (literal (nat 1) (\\"if.test.ts\\" 55))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 57) ((set_type (params (\\"if.test.ts\\" 57)) \\"nat\\" (\\"if.test.ts\\" 63)) (ifBlock (ge (params (\\"if.test.ts\\" 57)) (literal (nat 5) (\\"if.test.ts\\" 57)) (\\"if.test.ts\\" 57)) ((set (data) (params (\\"if.test.ts\\" 57)) (\\"if.test.ts\\" 57))) (\\"if.test.ts\\" 57)) (elseBlock ((set (data) (literal (nat 5) (\\"if.test.ts\\" 57)) (\\"if.test.ts\\" 57)))))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 54))
        )
        "
`;

exports[`Test (If) statement With (Then) and (Else) - [chaining version] 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"int\\": \\"5\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"COMPARE\\"
                },
                {
                    \\"prim\\": \\"GE\\"
                },
                {
                    \\"prim\\": \\"IF\\",
                    \\"args\\": [
                        [],
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            },
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"nat\\"
                                    },
                                    {
                                        \\"int\\": \\"5\\"
                                    }
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test (If) statement With (Then) and (Else) 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 35))
            storage (literal (nat 1) (\\"if.test.ts\\" 36))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 38) ((set_type (params (\\"if.test.ts\\" 38)) \\"nat\\" (\\"if.test.ts\\" 48)) (ifBlock (ge (params (\\"if.test.ts\\" 38)) (literal (nat 5) (\\"if.test.ts\\" 40)) (\\"if.test.ts\\" 40)) ((set (data) (params (\\"if.test.ts\\" 38)) (\\"if.test.ts\\" 40))) (\\"if.test.ts\\" 40)) (elseBlock ((set (data) (literal (nat 5) (\\"if.test.ts\\" 40)) (\\"if.test.ts\\" 40)))))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 35))
        )
        "
`;

exports[`Test (If) statement With (Then) and (Else) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"int\\": \\"5\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"COMPARE\\"
                },
                {
                    \\"prim\\": \\"GE\\"
                },
                {
                    \\"prim\\": \\"IF\\",
                    \\"args\\": [
                        [],
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            },
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"nat\\"
                                    },
                                    {
                                        \\"int\\": \\"5\\"
                                    }
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test (If) statement Without (Else) - [chaining version] 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 22))
            storage (literal (nat 1) (\\"if.test.ts\\" 23))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 25) ((set_type (params (\\"if.test.ts\\" 25)) \\"nat\\" (\\"if.test.ts\\" 29)) (ifBlock (ge (params (\\"if.test.ts\\" 25)) (literal (nat 5) (\\"if.test.ts\\" 27)) (\\"if.test.ts\\" 27)) ((set (data) (params (\\"if.test.ts\\" 25)) (\\"if.test.ts\\" 27))) (\\"if.test.ts\\" 27)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 22))
        )
        "
`;

exports[`Test (If) statement Without (Else) - [chaining version] 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"int\\": \\"5\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"COMPARE\\"
                },
                {
                    \\"prim\\": \\"GE\\"
                },
                {
                    \\"prim\\": \\"IF\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"SWAP\\"
                            },
                            {
                                \\"prim\\": \\"DROP\\"
                            }
                        ],
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test (If) statement Without (Else) 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 9))
            storage (literal (nat 1) (\\"if.test.ts\\" 10))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 12) ((set_type (params (\\"if.test.ts\\" 12)) \\"nat\\" (\\"if.test.ts\\" 16)) (ifBlock (ge (params (\\"if.test.ts\\" 12)) (literal (nat 5) (\\"if.test.ts\\" 14)) (\\"if.test.ts\\" 14)) ((set (data) (params (\\"if.test.ts\\" 12)) (\\"if.test.ts\\" 14))) (\\"if.test.ts\\" 14)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 9))
        )
        "
`;

exports[`Test (If) statement Without (Else) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"int\\": \\"5\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"COMPARE\\"
                },
                {
                    \\"prim\\": \\"GE\\"
                },
                {
                    \\"prim\\": \\"IF\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"SWAP\\"
                            },
                            {
                                \\"prim\\": \\"DROP\\"
                            }
                        ],
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
